docs(blog): inline toc anchors

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -22,9 +22,9 @@ continued maintenance and incremental improvements remain important.
 
 The first-time grants in this wave will go to:
 
-- [Nostr Feedz]
-- [Quartz]
-- [YakiHonne]
+- [Nostr Feedz](#nostr-feedz)
+- [Quartz](#quartz)
+- [YakiHonne](#yakihonne)
 
 The grant renewals have been awarded to:
 
@@ -126,9 +126,6 @@ donating to [The Nostr Fund] or becoming a recurring supporter.
 If you are a developer working on free and open-source nostr projects, please
 consider [applying for funding].
 
-[Nostr Feedz]: #nostr-feedz
-[Quartz]: #quartz
-[YakiHonne]: #yakihonne
 [Aug. 2024]: /blog/nostr-grants-august-2024#dart-ndk
 [nostr-relay]: https://github.com/mattn/nostr-relay
 [Oct. 2023]: /blog/nostr-grants-october-2023#algia
