--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -130,7 +130,7 @@ consider [applying for funding].
 [nostr-relay]: https://github.com/mattn/nostr-relay
 [Oct. 2023]: /blog/nostr-grants-october-2023#algia
 [The Nostr Fund]: /funds/nostr
-[PlebOne]: https://pleb.one/
+[PlebOne]: https://njump.to/nprofile1qqsgmjrgsgqtg3lv9eqp36j7gtw96jqfgr9n7xw23ump62qhnhzt5hs00xqxs
 [relay.pleb.one]: https://relay.pleb.one/
 [Nostr Feedz]: https://nostrfeedz.com/
 [NIP-23]: https://github.com/nostr-protocol/nips/blob/master/23.md
