--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -9,9 +9,9 @@ summary: "OpenSats is funding five more open-source projects advancing the nostr
 ---
 
 We're pleased to announce a new wave of grants supporting contributors building
-open-source software for the nostr ecosystem. This work includes relays,
-developer libraries, and the clients and services people use to publish and
-consume content over nostr.
+open-source software for the nostr ecosystem. This wave of grants includes work
+on relays, developer libraries, as well as clients and services people use to
+publish and consume content via nostr.
 
 This wave includes three new grants and two renewals. The new grants support
 projects focused on improving relay access and feed-based reading, expanding
