Streamline grant overview paragraph in fourteenth wave blog post
- Remove redundant opening sentence about grant count
- Use more direct phrasing 'Three new grants support'
- Simplify renewals explanation to be more concise

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -13,12 +13,10 @@ open-source software for the nostr ecosystem. This wave of grants includes work
 on relays, developer libraries, as well as clients and services people use to
 publish and consume content via nostr.
 
-This wave includes three new grants and two renewals. The new grants support
-projects focused on improving relay access and feed-based reading, expanding
-cross-platform developer tooling, and supporting a full-featured client that
-continues to invest in usability and discovery. We're also renewing support for
-projects that have become foundational pieces of nostr infrastructure, where
-continued maintenance and incremental improvements remain important.
+Three new grants support projects focused on improving relay access and
+feed-based reading, expanding cross-platform developer tooling, and supporting a
+full-featured client that continues to invest in usability and discovery. We're
+also renewing support for two previous grantees, as per below.
 
 The first-time grants in this wave will go to:
 
