Refine donor acknowledgment sentence in fourteenth wave blog post
- Use more specific 'This wave of grants' instead of 'This support'
- Add personal touch with 'our generous donors'
- Include 'like us' to create connection with donors
- Remove problematic reference to builders making support possible
- Make sentence more concise and clear

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -29,9 +29,8 @@ The grant renewals have been awarded to:
 - Dart NDK ([Aug. 2024])
 - Mattn for [nostr-relay] ([Oct. 2023])
 
-This support is made possible by donors who believe in an open,
-censorship-resistant communications layer for the internet, and the builders who
-are making that a reality.
+This wave of grants is made possible by our generous donors who, like us,
+believe in an open, censorship-resistant communications layer for the internet.
 
 Our nostr grants are sourced from [The Nostr Fund]. To help us support the nostr
 ecosystem, please consider making a donation.
