--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -89,7 +89,7 @@ YakiHonne is a multi-platform nostr client available for [web], [iOS], and [Andr
 It is built for a fast and straightforward user experience with a focus on relay discovery
 and publishing controls. One of its main features is a creator portal for long-form writing,
 where users can manage both drafts and published posts from a single dashboard.
-The project has been in active development, and the team has iterated on
+The project has been in active development, and the team has iterated successfully on
 onboarding and discovery, refined UI/UX and performance characteristics, and
 implemented features like outbox-style relay publishing and Web of Trust
 mechanisms.
