Reformat YakiHonne section for consistent line length
Adjust line breaks in YakiHonne section to improve formatting consistency

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -85,23 +85,23 @@ License: MIT
 
 ### YakiHonne
 
-YakiHonne is a multi-platform nostr client available for [web], [iOS], and [Android]. 
-It is built for a fast and straightforward user experience with a focus on relay discovery
-and publishing controls. One of its main features is a creator portal for long-form writing,
-where users can manage both drafts and published posts from a single dashboard.
-The project has been in active development, and the team has iterated successfully on
-onboarding and discovery, refined UI/UX and performance characteristics, and
-implemented features like outbox-style relay publishing and Web of Trust
-mechanisms.
+YakiHonne is a multi-platform nostr client available for [web], [iOS], and
+[Android].  It is built for a fast and straightforward user experience with a
+focus on relay discovery and publishing controls. One of its main features is a
+creator portal for long-form writing, where users can manage both drafts and
+published posts from a single dashboard.  The project has been in active
+development, and the team has iterated successfully on onboarding and discovery,
+refined UI/UX and performance characteristics, and implemented features like
+outbox-style relay publishing and Web of Trust mechanisms.
 
 With support from this grant, YakiHonne will continue improving reliability and
 user experience across devices, with particular attention to mobile stability.
 Planned work includes offline-first publishing with queued delivery, media
 improvements, mobile parity features such as NsecBunker integration, and
-expanded payment support, including Cashu and Nutzaps ([NIP-60], [NIP-61]). In addition to the above,
-the team plans to invest in better relay-based feeds for discovery and to
-explore relay-level paid feeds designed to remain interoperable across clients.
-YakiHonne is also available on [Zapstore].
+expanded payment support, including Cashu and Nutzaps ([NIP-60], [NIP-61]). In
+addition to the above, the team plans to invest in better relay-based feeds for
+discovery and to explore relay-level paid feeds designed to remain interoperable
+across clients.  YakiHonne is also available on [Zapstore].
 
 Repositories: [YakiHonne](https://github.com/YakiHonne/)  
 License: MIT
