Update call-to-action for developers in fourteenth wave blog post
- Remove 'please' for more direct phrasing
- Change to inline link format for 'apply for funding'
- Update link text from 'applying' to 'apply'

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -121,8 +121,8 @@ donating to [The Nostr Fund] or becoming a recurring supporter.
 <DonateRecurringButton />
 </div>
 
-If you are a developer working on free and open-source nostr projects, please
-consider [applying for funding].
+If you are a developer working on free and open-source nostr projects
+consider to [apply for funding](/apply).
 
 [Aug. 2024]: /blog/nostr-grants-august-2024#dart-ndk
 [nostr-relay]: https://github.com/mattn/nostr-relay
@@ -145,4 +145,3 @@ consider [applying for funding].
 [Zapstore]: https://zapstore.dev/apps/naddr1qvzqqqr7pvpzqgycd7urua6ajmgc3jjunhcseekkz0swkljhdzs0pvftxlx6cgdnqqtkxmmd9eukz6mfdphkumn99eukz6mfdphkumn97q8ugj
 [NIP-60]: https://github.com/nostr-protocol/nips/blob/master/60.md
 [NIP-61]: https://github.com/nostr-protocol/nips/blob/master/61.md
-[applying for funding]: /apply
