--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -2,7 +2,7 @@
 title: "Fourteenth Wave of Nostr Grants"
 date: '2025-12-22'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
-authors: ['default', 'arvin']
+authors: ['default', 'arvin', 'dergigi']
 images: ['/static/images/blog/94-fourteenth-wave-of-nostr-grants.jpg']
 draft: false
 summary: "OpenSats is funding five more open-source projects advancing the nostr ecosystem."
