--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -103,7 +103,7 @@ relay project—shipping improvements, strengthening reliability, and maturing
 both into stable production services. Funding also contributes to ongoing
 maintenance and operational costs of the public instances.
 
-Repositories: [Nostr-Feedz]; [PlebOne/relay.pleb.one]  
+Repositories: [Nostr-Feedz]; [relay.pleb.one][gh-relay]  
 License: MIT
 
 ---
@@ -133,7 +133,7 @@ consider to [apply for funding](/apply).
 [Nostr Feedz]: https://nostrfeedz.com/
 [NIP-23]: https://github.com/nostr-protocol/nips/blob/master/23.md
 [Nostr-Feedz]: https://github.com/PlebOne/Nostr-Feedz
-[PlebOne/relay.pleb.one]: https://github.com/PlebOne/relay.pleb.one
+[gh-relay]: https://github.com/PlebOne/relay.pleb.one
 [pyramid]: https://github.com/fiatjaf/pyramid
 [WoT Relay]: https://github.com/bitvora/wot-relay/
 [KMP]: https://kotlinlang.org/docs/multiplatform/kmp-overview.html
