Update Quartz repository link text for better readability
Change link text from 'amethyst/tree/main/quartz' to 'KotlinGeekDev/quartz'
Update link reference name to match

--- a/data/blog/fourteenth-wave-of-nostr-grants.mdx
+++ b/data/blog/fourteenth-wave-of-nostr-grants.mdx
@@ -82,7 +82,7 @@ modules, then add functionality and tests to ensure the library behaves
 consistently. A final milestone is to build a simple first version of Amethyst
 for iOS that can connect to nostr and do the basics, like reading and posting.
 
-Repository: [amethyst/tree/main/quartz]  
+Repository: [KotlinGeekDev/quartz]  
 License: MIT
 
 ### Nostr Feedz
@@ -138,7 +138,7 @@ consider to [apply for funding](/apply).
 [WoT Relay]: https://github.com/bitvora/wot-relay/
 [KMP]: https://kotlinlang.org/docs/multiplatform/kmp-overview.html
 [Amethyst]: /projects/amethyst
-[amethyst/tree/main/quartz]: https://github.com/KotlinGeekDev/amethyst/tree/main/quartz
+[KotlinGeekDev/quartz]: https://github.com/KotlinGeekDev/amethyst/tree/main/quartz
 [web]: https://www.yakihonne.com
 [iOS]: https://apps.apple.com/mo/app/yakihonne/id6472556189?l=en-GB
 [Android]: https://play.google.com/store/apps/details?id=com.yakihonne.yakihonne
