fix(blog): capitalize LTS tag in nostr LTS blog post

--- a/data/blog/nostr-lts-long-term-support-for-nostr-developers.mdx
+++ b/data/blog/nostr-lts-long-term-support-for-nostr-developers.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Long-term Support for Nostr Developers'
 date: '2024-03-11'
-tags: ['OpenSats', 'grants', 'lts', 'nostr']
+tags: ['OpenSats', 'grants', 'LTS', 'nostr']
 draft: false
 authors: ['odell', 'nvk']
 images: ['/static/images/blog/25-nostr-lts.jpg']
