fix(blog): remove nostr tag from let a thousand flowers bloom post

--- a/data/blog/let-a-thousand-flowers-bloom.mdx
+++ b/data/blog/let-a-thousand-flowers-bloom.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Let a Thousand Flowers Bloom'
 date: '2025-03-15'
-tags: ['OpenSats', 'grants', 'bitcoin', 'nostr', 'wave']
+tags: ['OpenSats', 'grants', 'bitcoin', 'wave']
 draft: false
 authors: ['default', 'dergigi']
 images: ['/static/images/blog/72-let-a-thousand-flowers-bloom.jpg']
