Add first draft

--- a/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
+++ b/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
@@ -7,3 +7,43 @@ images: ['/static/images/blog/95-opensats-receives-donation-from-starkware-stark
 draft: false
 summary: "StarkWare and Starknet Foundation are supporting OpenSats with a $400,000 donation."
 ---
+
+We are pleased to share that OpenSats has received $200,000 from [StarkWare] and
+an additional $200,000 from the [Starknet Foundation], for a total of $400,000
+directed to our [General Fund].
+
+OpenSats is a 501(c)(3) public charity that supports a sustainable ecosystem of
+funding for free and open-source projects and their contributors. 100% of
+donations to [our funds] go to free and open-source projects. Administrative and
+operational expenses are covered separately through our [Operations Budget].
+
+StarkWare and the Starknet Foundation [share a commitment] to building open,
+censorship-resistant, and privacy-preserving systems, connecting this work to
+the long-term health of Bitcoin’s open-source foundation. They highlighted the
+role nonprofit funding plays in enabling developers, researchers, educators, and
+maintainers to do sustained work on infrastructure that everyone depends on.
+
+Our General Fund helps support work across the Bitcoin ecosystem, including
+protocol and wallet development, Lightning improvements, developer tooling,
+technical documentation, education, and other public infrastructure that
+strengthens the ecosystem long-term.
+
+We are grateful to StarkWare and the Starknet Foundation for their support and
+for publicly affirming the importance of funding open-source work.
+
+If you share our commitment to free and open-source software for Bitcoin and
+freedom tech, you can support OpenSats by donating to one of our funds.
+
+<center>
+  <DonateRecurringButton />
+</center>
+
+If you are a developer working on free and open-source Bitcoin or nostr
+projects, we encourage you to [apply for funding].
+
+[Starknet Foundation]: https://www.starknet.org/
+[General Fund]: /funds/general
+[our funds]: /funds
+[Operations Budget]: /funds/ops
+[share a commitment]: https://www.starknet.io/blog/investing-in-freedom-supporting-bitcoin-non-profit-organizations/
+[apply for funding]: /apply
