--- a/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
+++ b/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
@@ -2,7 +2,7 @@
 title: "OpenSats Receives $400,000 Donation From StarkWare and Starknet Foundation"
 date: '2025-11-24'
 tags: ['OpenSats', 'funding', 'donations']
-authors: ['default', 'odell', 'dergigi']
+authors: ['odell', 'dergigi']
 images: ['/static/images/blog/95-opensats-receives-donation-from-starkware-starknet-foundation.jpg']
 draft: false
 summary: "StarkWare and Starknet Foundation are supporting OpenSats with a $400,000 donation."
