Add escape characters `\` in dollar amounts

--- a/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
+++ b/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
@@ -8,8 +8,8 @@ draft: false
 summary: "StarkWare and Starknet Foundation are supporting OpenSats with a $400,000 donation."
 ---
 
-We are pleased to share that OpenSats has received $200,000 from [StarkWare] and
-an additional $200,000 from the [Starknet Foundation], for a total of $400,000
+We are pleased to share that OpenSats has received \$200,000 from [StarkWare] and
+an additional \$200,000 from the [Starknet Foundation], for a total of \$400,000
 directed to our [General Fund].
 
 OpenSats is a 501(c)(3) public charity that supports a sustainable ecosystem of
