Add StarkWare link
Added a link to StarkWare's website for funding applications.

--- a/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
+++ b/data/blog/opensats-receives-dollar400k-donation-from-starkware-starknet.mdx
@@ -41,6 +41,7 @@ freedom tech, you can support OpenSats by donating to one of our funds.
 If you are a developer working on free and open-source Bitcoin or nostr
 projects, we encourage you to [apply for funding].
 
+[StarkWare]: https://starkware.co/
 [Starknet Foundation]: https://www.starknet.org/
 [General Fund]: /funds/general
 [our funds]: /funds
