Update intro sentence
Updated the announcement to clarify the recognition of Brad Stachurski's work.

--- a/data/blog/brad-stachurski-receives-lts.mdx
+++ b/data/blog/brad-stachurski-receives-lts.mdx
@@ -8,8 +8,9 @@ draft: false
 summary: "OpenSats welcomes Brad Stachurski as an LTS grantee"
 ---
 
-OpenSats is pleased to announce long-term support for [Brad Stachurski] for his
-ongoing work on Fedimint, a federated Chaumian ecash system for Bitcoin.
+OpenSats is pleased to announce long-term support for [Brad Stachurski] in
+recognition of his ongoing work on Fedimint, a federated Chaumian ecash system
+for Bitcoin.
 
 Brad has helped coordinate core releases and operational improvements that make
 [Fedimint] safer to upgrade and easier to run. As a co-maintainer, he focuses on
