Edit: Our -> OpenSats'
Clarify the mission statement to specify OpenSats.

--- a/data/blog/brad-stachurski-receives-lts.mdx
+++ b/data/blog/brad-stachurski-receives-lts.mdx
@@ -29,7 +29,7 @@ responsibilities, including:
 - Improve deployment tooling, including packaging and self-hosted setups.
 - Maintain [ecash-app] and use it as a test client in the release workflow.
 
-Our [mission] is to provide sustainable funding for the builders and maintainers
+OpenSats' [mission] is to provide sustainable funding for the builders and maintainers
 of critical open-source infrastructure within the Bitcoin ecosystem.
 
 The [Long-Term Support program] is made possible by the generosity of our
