fix: correct wording to indicate first impact reports

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -9,7 +9,7 @@ summary: '365 days. Two funds. 350+ grants. Billions of sats.'
 ---
 
 Twenty-twenty-five. The momentum continues. Over the past year, we have given
-more grants, published more impact reports, and onboarded more long-term support
+more grants, published our first impact reports, and onboarded more long-term support
 grantees than ever before. We want to take the opportunity to pause, reflect,
 and share our year in review—looking back at announcements, donations, fund
 allocation, and grantee growth—before providing an outlook for the year ahead.
