chore: use 2024 graphics as temporary placeholders

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -4,7 +4,7 @@ date: '2026-01-03'
 tags: ['OpenSats', 'grants', 'donations', 'bitcoin', 'nostr', 'review']
 draft: false
 authors: ['dergigi', 'default']
-images: ['/static/images/blog/97-opensats-2025-year-in-review.jpg']
+images: ['/static/images/blog/66-opensats-2024-year-in-review.jpg']
 summary: '365 days. Two funds. 350+ grants. Billions of sats.'
 ---
 
@@ -53,7 +53,7 @@ working on IBD performance and Silent Payments BIPs, and [Brad
 Stachurski](/blog/brad-stachurski-receives-lts), a Fedimint co-maintainer
 focused on security and deployment tooling.
 
-![PLACEHOLDER: 2025 LTS Grantees Timeline](/static/images/blog/2025-eoy/lts-grantees.png)
+![](/static/images/blog/2024-eoy/lts-grantees.png)
 
 Throughout 2025, we announced [seven waves of bitcoin
 grants](/tags/wave)—from the [9th wave](/blog/ninth-wave-of-bitcoin-grants) in
@@ -149,7 +149,7 @@ The ratio of Lightning to on-chain payments remained steady at approximately
 Fund](/funds/general), with the remainder split between [The Nostr
 Fund](/funds/nostr) and our [Operations Budget](/funds/ops).
 
-![PLACEHOLDER: 2025 Donation Distribution Chart](/static/images/blog/2025-eoy/donations.png)
+![](/static/images/blog/2024-eoy/donations.png)
 
 We remain committed to our model: 100% of donations to our General Fund and The
 Nostr Fund go directly to grantees. Our operations are funded separately,
@@ -174,7 +174,7 @@ Fund and over \$11M from The Nostr Fund across the lifetime of both programs.
 Year-over-year, this represents continued growth in our grant-giving capacity
 and reach.
 
-![PLACEHOLDER: 2025 Fund Allocation Chart](/static/images/blog/2025-eoy/allocation.png)
+![](/static/images/blog/2024-eoy/allocation.png)
 
 The convergence between bitcoin and nostr that we noted [last
 year](/blog/2024-year-in-review#allocation) has accelerated. Ecash projects
@@ -190,7 +190,7 @@ In 2025, our General Fund grants emphasized several key areas: Bitcoin Core
 development, Silent Payments infrastructure, Lightning improvements, ecash
 tooling, mining decentralization, and developer libraries.
 
-![PLACEHOLDER: 2025 Bitcoin Distribution Chart](/static/images/blog/2025-eoy/bitcoin-distribution.png)
+![](/static/images/blog/2024-eoy/bitcoin-distribution.png)
 
 Bitcoin Core support remained central to our allocation. Beyond the LTS grants
 for experienced contributors, we funded projects that strengthen the reference
@@ -248,7 +248,7 @@ The Nostr Fund continued to support projects across the protocol's expanding
 scope. Client development remained important, but 2025 saw significant growth
 in infrastructure, tooling, and novel use cases.
 
-![PLACEHOLDER: 2025 Nostr Distribution Chart](/static/images/blog/2025-eoy/nostr-distribution.png)
+![](/static/images/blog/2024-eoy/nostr-distribution.png)
 
 Our [nostr clients impact report](/blog/advancements-in-nostr-clients)
 highlighted major advances: Amethyst's transition to the outbox model (enabling
@@ -309,7 +309,7 @@ In total, we have now given over 350 grants since launching our grant program in
 2023. The 2025 additions include approximately 140 new grants across bitcoin,
 nostr, education, and ecosystem-building initiatives.
 
-![PLACEHOLDER: 2025 Grantee Growth Chart](/static/images/blog/2025-eoy/grantees.png)
+![](/static/images/blog/2024-eoy/grantees.png)
 
 As of December 2025, we are sending approximately \$1.2M worth of bitcoin to
 our grantees each month. Thanks to bitcoin and Lightning, we can do this with
