feat: add dedicated Impact Reports section

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -16,6 +16,7 @@ allocation, and grantee growth—before providing an outlook for the year ahead.
 
 - [Announcements](#announcements)
 - [Donations](#donations)
+- [Impact Reports](#impact-reports)
 - [Allocation](#allocation)
 - [Grantees](#grantees)
 - [Outlook](#outlook)
@@ -98,19 +99,6 @@ Kit](/blog/let-a-thousand-flowers-bloom#foundation-formation-kit) (tools for
 creating tax-exempt foundations). We believe a healthy ecosystem requires many
 funding sources, and these organizations help make that possible.
 
-We also published seven comprehensive impact reports throughout the year,
-highlighting the work of our grantees across [on-chain
-privacy](/blog/developing-advancements-in-onchain-privacy), [Lightning
-infrastructure](/blog/advancements-in-lightning-infrastructure), [developer
-training](/blog/advancements-in-developer-training), [developer
-libraries](/blog/advancements-in-developer-libraries),
-[ecash](/blog/advancements-in-ecash), [Bitcoin and Lightning
-wallets](/blog/advancements-in-bitcoin-and-lightning-wallets), and [nostr
-clients](/blog/advancements-in-nostr-clients). These reports demonstrate the
-tangible progress our grants enable—from Payjoin V2 going live in Bull Bitcoin
-and Cake Wallet, to the maturation of Cashu mobile bindings, to major client
-improvements across Amethyst, Damus, and Coracle.
-
 Our support for all of these projects and initiatives is made possible by our
 donors. If you like what we do, please consider [making a
 donation](/donate).
@@ -159,6 +147,25 @@ reach developers directly.
 <center>
   <DonateToGeneralFundButton />
 </center>
+
+---
+
+## Impact Reports
+
+In 2025, we published our first comprehensive impact reports, highlighting the
+work of our grantees across seven key areas:
+
+- [On-chain privacy](/blog/developing-advancements-in-onchain-privacy)
+- [Lightning infrastructure](/blog/advancements-in-lightning-infrastructure)
+- [Developer training](/blog/advancements-in-developer-training)
+- [Developer libraries](/blog/advancements-in-developer-libraries)
+- [Ecash](/blog/advancements-in-ecash)
+- [Bitcoin and Lightning wallets](/blog/advancements-in-bitcoin-and-lightning-wallets)
+- [Nostr clients](/blog/advancements-in-nostr-clients)
+
+These reports demonstrate the tangible progress our grants enable—from Payjoin
+V2 going live in Bull Bitcoin and Cake Wallet, to the maturation of Cashu mobile
+bindings, to major client improvements across Amethyst, Damus, and Coracle.
 
 ---
 
