chore: use monthly donation button throughout

--- a/data/blog/2025-year-in-review.mdx
+++ b/data/blog/2025-year-in-review.mdx
@@ -145,7 +145,7 @@ allowing donors to support projects with confidence that their contributions
 reach developers directly.
 
 <center>
-  <DonateToGeneralFundButton />
+  <DonateRecurringButton />
 </center>
 
 ---
@@ -294,7 +294,7 @@ addition of [SnowCait](/blog/snowcait-receives-lts-grant) in June strengthened
 our support for Japanese nostr development.
 
 <center>
-  <DonateToNostrFundButton />
+  <DonateRecurringButton />
 </center>
 
 You can read more about these projects in our grant announcements from
@@ -375,7 +375,7 @@ projects we support. If you believe in what we're doing, please consider
 supporting us:
 
 <center>
-  <DonateToOperationsButton />
+  <DonateRecurringButton />
 </center>
 
 We are grateful to everyone who contributed to OpenSats in 2025—whether through
